--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
-  "name": "Ballotbox",
+  "name": "ballotbox",
   "version": "0.0.0",
   "devDependencies": {
+    "babelify": "^7.3.0",
+    "browser-sync": "^2.12.5",
+    "browserify": "^13.0.0",
+    "debowerify": "^1.4.1",
     "gulp": "^3.9.0",
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.3.1",
     "gulp-uglify": "1.2.0",
-    "rimraf": "2.2.8"
+    "gulp-util": "^3.0.7",
+    "pretty-hrtime": "^1.0.2",
+    "require-dir": "^0.3.0",
+    "rimraf": "2.2.8",
+    "tsify": "^0.15.2",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
