--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.6",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
