--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "ballotbox",
   "version": "0.0.0",
+  "scripts": {
+    "start": "dnx Microsoft.AspNet.Server.Kestrel",
+    "build": "typings install && gulp build",
+    "dev": "gulp watch",
+    "postinstall": "npm run build"
+  },
   "devDependencies": {
     "babelify": "^7.3.0",
     "browser-sync": "^2.12.5",
@@ -14,10 +20,12 @@
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "1.2.0",
     "gulp-util": "^3.0.7",
+    "nodemon": "^1.9.2",
     "pretty-hrtime": "^1.0.2",
     "require-dir": "^0.3.0",
     "rimraf": "2.2.8",
     "tsify": "^0.15.2",
+    "typings": "^0.8.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
