--- a/project.json
+++ b/project.json
@@ -18,6 +18,7 @@
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
     "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.AspNet.Tooling.Razor": "1.0.0-rc1-final",
     "Microsoft.Dnx.Runtime":"1.0.0-rc1-final",
@@ -32,6 +33,7 @@
 
   "commands": {
     "web": "Microsoft.AspNet.Server.Kestrel --server.urls=http://*:5000/",
+    "weblistener": "Microsoft.AspNet.Server.WebListener",
     "ef": "EntityFramework.Commands"
   },
 
