--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "bootstrap-sass": "^3.3.6",
     "lodash": "^4.11.1",
     "react": "^15.0.2",
-    "react-bootstrap": "^0.29.3",
+    "react-bootstrap": "^0.28.1",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
+    "react-router-bootstrap": "^0.23.0",
     "redux": "^3.5.2",
     "redux-form": "^5.2.3",
     "redux-promise": "^0.5.3"
