--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "axios": "^0.11.0",
     "bootstrap-sass": "^3.3.6",
+    "localforage": "^1.4.1",
     "lodash": "^4.11.1",
     "react": "^15.0.2",
     "react-bootstrap": "^0.28.1",
@@ -41,6 +42,8 @@
     "react-router-bootstrap": "^0.23.0",
     "redux": "^3.5.2",
     "redux-form": "^5.2.3",
-    "redux-promise": "^0.5.3"
+    "redux-persist": "^3.1.1",
+    "redux-promise": "^0.5.3",
+    "setimmediate": "^1.0.4"
   }
 }
