--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.11.1",
     "react": "^15.0.2",
     "react-bootstrap": "^0.28.1",
+    "react-cookie": "^0.4.5",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
