--- a/NuGet.config
+++ b/NuGet.config
@@ -4,5 +4,6 @@
     <!--To inherit the global NuGet package sources remove the <clear /> line below -->
     <clear />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="www.myget.org" value="https://www.myget.org/F/npgsql-unstable/api/v3/index.json" />
   </packageSources>
 </configuration>
