--- a/config-template.json
+++ b/config-template.json
@@ -1,5 +1,5 @@
 {
   "Data": {
-    "BallotboxContextConnection": "User ID={USERNAME};Password={PASSWORD};Host={HOSTNAME}Port={PORTNO};Database={DBNAME};Pooling=true;Connection Lifetime=0;"
+    "BallotboxContextConnection": "User ID={USERNAME};Password={PASSWORD};Host={HOSTNAME}Port={PORTNO};Database={DBNAME};Pooling=true;"
   }
 }
