--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "postinstall": "npm run build"
   },
   "devDependencies": {
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.12.5",
-    "browserify": "^13.0.0",
-    "debowerify": "^1.4.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "2.5.2",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-cssmin": "0.1.7",
-    "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-uglify": "1.2.0",
-    "gulp-util": "^3.0.7",
-    "nodemon": "^1.9.2",
-    "pretty-hrtime": "^1.0.2",
-    "require-dir": "^0.3.0",
-    "rimraf": "2.2.8",
-    "tsify": "^0.15.2",
+    "aspnet-webpack-react": "^1.0.1",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "bootstrap-sass": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "extendify": "^1.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "jquery": "^2.2.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.10",
     "typings": "^0.8.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "aspnet-prerendering": "^1.0.0",
+    "aspnet-webpack": "^1.0.2",
     "axios": "^0.11.0",
-    "bootstrap-sass": "^3.3.6",
+    "babel-core": "^6.5.2",
     "d3": "^3.5.17",
     "font-awesome": "^4.6.1",
     "localforage": "^1.4.1",
@@ -49,6 +49,7 @@
     "redux-persist": "^3.1.1",
     "redux-promise": "^0.5.3",
     "setimmediate": "^1.0.4",
-    "validator": "^5.2.0"
+    "validator": "^5.2.0",
+    "webpack-externals-plugin": "^1.0.0"
   }
 }
