--- a/project.json
+++ b/project.json
@@ -28,7 +28,8 @@
     "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
-    "AutoMapper": "4.2.1"
+    "AutoMapper": "4.2.1",
+    "Microsoft.AspNetCore.ReactServices": "1.0.0-*"
   },
 
   "tools": {
@@ -78,7 +79,11 @@
   },
 
   "scripts": {
-    "prepublish": [ "npm install", "bower install", "gulp clean", "gulp min" ],
+    "prepare": [
+      "npm install",
+      "webpack --config webpack.config.vendor.js"
+    ],
+    "prepublish": [ "webpack" ],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
