--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1",
+    "typings": "^1.0.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -33,6 +33,7 @@
     "axios": "^0.11.0",
     "babel-core": "^6.5.2",
     "d3": "^3.5.17",
+    "domain-task": "^1.0.1",
     "font-awesome": "^4.6.1",
     "localforage": "^1.4.1",
     "lodash": "^4.11.1",
@@ -44,10 +45,13 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-bootstrap": "^0.23.0",
+    "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-form": "^5.2.3",
     "redux-persist": "^3.1.1",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
+    "redux-typed": "^1.0.0",
     "setimmediate": "^1.0.4",
     "validator": "^5.2.0",
     "webpack-externals-plugin": "^1.0.0"
