--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,6 @@
     "skipDefaultLibCheck": true
   },
   "exclude": [
-    "node_modules",
-    "build",
-    "typings/main",
-    "typings/main.d.ts"
+    "node_modules"
   ]
 }
