--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "aspnet-prerendering": "^1.0.0",
     "aspnet-webpack": "^1.0.2",
+    "axios": "^0.11.1",
     "babel-core": "^6.5.2",
     "d3": "^3.5.17",
     "domain-task": "^1.0.1",
@@ -42,7 +43,7 @@
     "react-cookie": "^0.4.5",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.4.0",
+    "react-router": "^2.1.1",
     "react-router-bootstrap": "^0.23.0",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
