--- a/project.json
+++ b/project.json
@@ -29,7 +29,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
     "AutoMapper": "4.2.1",
-    "Microsoft.AspNetCore.ReactServices": "1.0.0-*"
+    "Microsoft.AspNetCore.ReactServices": "1.0.0-*",
+    "Microsoft.AspNetCore.NodeServices": "1.0.0-beta-000002"
   },
 
   "tools": {
