--- a/project.json
+++ b/project.json
@@ -30,7 +30,10 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
     "AutoMapper": "4.2.1",
     "Microsoft.AspNetCore.ReactServices": "1.0.0-*",
-    "Microsoft.AspNetCore.NodeServices": "1.0.0-beta-000002"
+    "Microsoft.AspNetCore.NodeServices": "1.0.0-beta-000002",
+    "System.Security.Cryptography.Csp": "4.0.0-rc2-24027",
+    "Microsoft.IdentityModel.Tokens": "5.0.0-rc2-305061149",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0-rc2-final"
   },
 
   "tools": {
