--- a/project.json
+++ b/project.json
@@ -31,7 +31,6 @@
     "AutoMapper": "4.2.1",
     "Microsoft.AspNetCore.ReactServices": "1.0.0-*",
     "Microsoft.AspNetCore.NodeServices": "1.0.0-beta-000002",
-    "System.Security.Cryptography.Csp": "4.0.0-rc2-24027",
     "Microsoft.IdentityModel.Tokens": "5.0.0-rc2-305061149",
     "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0-rc2-final"
   },
@@ -60,7 +59,10 @@
         "dotnet5.6",
         "dnxcore50",
         "portable-net45+win8"
-      ]
+      ],
+      "dependencies": {
+        "System.Security.Cryptography.Csp": "4.0.0-rc2-24027"
+      }
     }
   },
 
