--- a/config-template.json
+++ b/config-template.json
@@ -1,5 +1,10 @@
 {
   "Data": {
     "BallotboxContextConnection": "User ID={USERNAME};Password={PASSWORD};Host={HOSTNAME}Port={PORTNO};Database={DBNAME};Pooling=true;"
+  },
+  "Token": {
+    "Secret": "{SECRET}",
+    "Audience": "{AUDIENCE}",
+    "Issuer": "{ISSUER}"
   }
 }
