Begin migration to Core 1.0

--- a/NuGet.config
+++ b/NuGet.config
@@ -3,6 +3,7 @@
   <packageSources>
     <!--To inherit the global NuGet package sources remove the <clear /> line below -->
     <clear />
+    <add key="dayala" value="https://www.myget.org/F/dayalajs/api/v3/index.json" />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="www.myget.org" value="https://www.myget.org/F/npgsql-unstable/api/v3/index.json" />
   </packageSources>
