--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "postinstall": "npm run build"
   },
   "devDependencies": {
-    "aspnet-webpack-react": "^1.0.1",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -17,6 +16,7 @@
     "extendify": "^1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "node-sass": "^3.8.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
@@ -28,8 +28,9 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "aspnet-prerendering": "dmayala/custom-prerendering",
-    "aspnet-webpack": "^1.0.2",
+    "aspnet-prerendering": "^1.0.4",
+    "aspnet-webpack": "1.0.2",
+    "aspnet-webpack-react": "1.0.1",
     "axios": "^0.11.1",
     "babel-core": "^6.5.2",
     "d3": "^3.5.17",
